--- a/Computer Vision/Untitled-1.ipynb
+++ b/Computer Vision/Untitled-1.ipynb
@@ -759,7 +759,7 @@
     "        y_pred = torch.softmax(y_logits.squeeze(), dim = 0).argmax(dim = 1)\n",
     "        y_preds.append(y_pred.cpu())\n",
     "\n",
-    "y_pred_tensor = torch.cat(y_preds)"
+    "y_pred_tensor = torch.cat(y_preds)\n"
    ]
   }
  ],
