--- a/Computer Vision/Untitled-1.ipynb
+++ b/Computer Vision/Untitled-1.ipynb
@@ -716,7 +716,8 @@
     "        track += 1\n",
     "        if track == 9:\n",
     "            break\n",
-    "    skip += 2"
+    "    skip += 2\n",
+    "    "
    ]
   },
   {
