--- a/PyTorch Custom Datasets/main.ipynb
+++ b/PyTorch Custom Datasets/main.ipynb
@@ -825,8 +825,7 @@
     "\n",
     "test_dataloader = DataLoader(dataset = test_data,\n",
     "                             batch_size = BATCH_SIZE, \n",
-    "                             shuffle = False)\n",
-    "                             "
+    "                             shuffle = False)"
    ]
   }
  ],
