--- a/PyTorch Custom Datasets/main.ipynb
+++ b/PyTorch Custom Datasets/main.ipynb
@@ -1048,7 +1048,8 @@
    ],
    "source": [
     "custom_test_dataset_loader,custom_train_dataset_loader\n",
-    "print(custom_test_dataset_loader.dataset[0])\n"
+    "print(custom_test_dataset_loader.dataset[0])\n",
+    "\n"
    ]
   }
  ],
