--- a/Tutorials/TensorBoard/main.ipynb
+++ b/Tutorials/TensorBoard/main.ipynb
@@ -56,11 +56,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = 0.001\n",
+    "\n",
     "in_channel = 1\n",
     "num_classes = 10\n",
-    "batch_size = 10\n",
-    "num_epochs = 5"
+    "\n",
+    "num_epochs = 1"
    ]
   },
   {
@@ -86,7 +86,7 @@
    ],
    "source": [
     "train_dataset = datasets.MNIST(root = \"data/mnist\", train = True, transform=transforms.ToTensor(), download = True)\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "\n",
     "\n",
     "model = CNN(in_channels=in_channel, num_classes=num_classes)\n",
     "model.to(device)"
@@ -98,8 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss_fn = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr = lr, weight_decay=0.0)"
+    "loss_fn = nn.CrossEntropyLoss()\n"
    ]
   },
   {
@@ -108,8 +107,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write = SummaryWriter()\n",
-    "step = 0"
+    "\n",
+    "step = 0\n",
+    "batch_sizes = [256]\n",
+    "learning_rates = [1e-2]\n",
+    "classes = [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\"]"
    ]
   },
   {
@@ -118,30 +120,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for epoch in range(num_epochs):\n",
-    "    losses = []\n",
-    "    accuracies = []\n",
-    "    for batch, (data, label) in enumerate(train_loader):\n",
-    "        data = data.to(device)\n",
-    "        label = label.to(device)\n",
+    "for batch_size in batch_sizes:\n",
+    "    for learning_rate in learning_rates:\n",
+    "        model = CNN(in_channels=in_channel, num_classes=num_classes)\n",
+    "        model.to(device)\n",
+    "        model.train()\n",
+    "        train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "        optimizer = optim.Adam(model.parameters(), lr = learning_rate, weight_decay=0.0)\n",
+    "        write = SummaryWriter(\n",
+    "            f\"runs/MNIST {batch_size} LR {learning_rate}\"\n",
+    "        )\n",
+    "        step = 0\n",
+    "        for epoch in range(num_epochs):\n",
+    "            losses = []\n",
+    "            accuracies = []\n",
+    "            for batch, (data, label) in enumerate(train_loader):\n",
+    "                data = data.to(device)\n",
+    "                label = label.to(device)\n",
     "\n",
-    "        y_pred = model(data)\n",
-    "        loss = loss_fn(y_pred, label)\n",
-    "        losses.append(loss.item())\n",
+    "                y_pred = model(data)\n",
+    "                loss = loss_fn(y_pred, label)\n",
+    "                losses.append(loss.item())\n",
     "\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "                optimizer.zero_grad()\n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
     "\n",
-    "        _, prediction = y_pred.max(1)\n",
-    "        num_correct = (prediction == label).sum()\n",
-    "        running_acc = float(num_correct)/float(data.shape[0])\n",
     "\n",
-    "        write.add_scalar(\"Training loss\", loss, global_step=step)\n",
-    "        step += 1\n",
+    "                img_grid = torchvision.utils.make_grid(data)\n",
+    "                features = data.reshape(data.shape[0], -1)\n",
+    "                class_labels = [classes[i] for i in label]\n",
+    "                # write.add_image(\"mnist_images\", img_grid)\n",
+    "                # write.add_histogram(\"fc1\", model.fc1.weight)\n",
+    "                _, prediction = y_pred.max(1)\n",
+    "                num_correct = (prediction == label).sum()\n",
+    "                running_acc = float(num_correct)/float(data.shape[0])\n",
     "\n",
-    "        write.add_scalar(\"Training accuracy\", running_acc, global_step=step)\n",
-    "        "
+    "\n",
+    "                # accuracies.append(running_acc)\n",
+    "                # write.add_scalar(\"Training loss\", loss, global_step=step)\n",
+    "                # write.add_scalar(\n",
+    "                #     \"Training Accuracy\", running_acc, global_step=step\n",
+    "                # )\n",
+    "                write.add_embedding(features, metadata=class_labels, label_img=data, global_step = batch)\n",
+    "                step += 1\n",
+    "\n",
+    "            # write.add_hparams(\n",
+    "            #     hparam_dict = {\"lr\": learning_rate, \"bsize\": batch_size},\n",
+    "            #     metric_dict = {\n",
+    "            #         \"acc\": running_acc,\n",
+    "            #         \"ll\": loss,\n",
+    "            #     },\n",
+    "            # )"
    ]
   },
   {
@@ -149,9 +179,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    " "
-   ]
+   "source": []
   }
  ],
  "metadata": {
