LeNet model implemented

--- a/Tutorials/TensorBoard/main.ipynb
+++ b/Tutorials/TensorBoard/main.ipynb
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "train_dataset = datasets.MNIST(root = \"data/mnist\", train = True, transform=transforms.ToTensor(), download = True)\n",
+    "train_dataset = datasets.MNIST(root = \"../../data/mnist\", train = True, transform=transforms.ToTensor(), download = True)\n",
     "\n",
     "\n",
     "model = CNN(in_channels=in_channel, num_classes=num_classes)\n",
