--- a/Tutorials/LeNet/scratch.ipynb
+++ b/Tutorials/LeNet/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,18 +113,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_dataloader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
     "optimizer = optim.Adam(model.parameters(), lr = 0.01, weight_decay=0.0)\n",
+    "step = 0\n",
     "for epoch in range(EPOCHS):\n",
     "    losses = []\n",
     "    accuracies = []\n",
-    "    write = SummaryWriter(\n",
-    "            f\"runs/LeNet/{epoch}\"\n",
-    "        )\n",
+    "    \n",
+    "    \n",
     "    for batch, (data, label) in enumerate(train_dataloader):\n",
     "        data = data.to(device)\n",
     "        label = label.to(device)\n",
@@ -142,10 +142,11 @@
     "        num_correct = (prediction == label).sum()\n",
     "        running_acc = float(num_correct)/float(data.shape[0])\n",
     "\n",
-    "        write.add_scalar(\"Training loss\", loss, global_step=batch)\n",
+    "        write.add_scalar(\"Training loss\", loss, global_step=step)\n",
     "        write.add_scalar(\n",
-    "            \"Training Accuracy\", running_acc, global_step=batch\n",
-    "        )"
+    "            \"Training Accuracy\", running_acc, global_step=step\n",
+    "        )\n",
+    "        step += 1"
    ]
   }
  ],
