VGG model customized

--- a/Tutorials/VGG/scratch.ipynb
+++ b/Tutorials/VGG/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "        self.in_channels = in_channels\n",
     "        self.conv_layers = self.create_conv_layer(VGG_types['VGG11'])\n",
     "        self.fcs = nn.Sequential(\n",
-    "            nn.Linear(512 * 7 * 7, 4096),\n",
+    "            nn.Linear(131072, 4096),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.5),\n",
     "            nn.Linear(4096, 4096),\n",
@@ -48,7 +48,9 @@
     "\n",
     "    def forward(self, x):\n",
     "        x = self.conv_layers(x)\n",
+    "        print(x.shape)\n",
     "        x = x.reshape(x.shape[0], -1)\n",
+    "        print(x.shape)\n",
     "        x = self.fcs(x)\n",
     "        return x\n",
     "\n",
@@ -69,20 +71,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "torch.Size([1, 512, 16, 16])\n",
+      "torch.Size([1, 131072])\n",
       "torch.Size([1, 1000])\n"
      ]
     }
    ],
    "source": [
     "model = VGG(in_channels=3, num_classes=1000)\n",
-    "x = torch.randn(1, 3, 224, 244)\n",
+    "x = torch.randn(1, 3, 512, 512)\n",
     "print(model(x).shape)"
    ]
   }
