--- a/Tutorials/RNN/scratch.ipynb
+++ b/Tutorials/RNN/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hyperparameters\n",
+    "EPOCHS = 2\n",
+    "num_classes = 10\n",
+    "learning_rate = 0.001\n",
+    "batch_size = 64\n",
+    "\n",
+    "# RNN parameters\n",
+    "num_layers = 2\n",
+    "input_size = 28\n",
+    "hidden_size = 256\n",
+    "sequence_length = 28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,24 +97,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hyperparameters\n",
-    "EPOCHS = 3\n",
-    "input_size = 28\n",
-    "hidden_size = 256\n",
-    "num_layers = 2\n",
-    "num_classes = 10\n",
-    "sequence_length = 28\n",
-    "learning_rate = 0.005\n",
-    "batch_size = 64"
+    "class GRU(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, num_layers, num_classes):\n",
+    "        super(GRU, self).__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.num_layers = num_layers\n",
+    "        self.gru = nn.GRU(input_size, hidden_size, num_layers, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_size * sequence_length, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        h0 = torch.zeros(self.num_layers, x.size(0), self.hidden_size).to(device)\n",
+    "        out, _ = self.gru(x, h0)\n",
+    "        out = out.reshape(out.shape[0], -1)\n",
+    "        out = self.fc(out)\n",
+    "        return out\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LSTM(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, num_layers, num_classes):\n",
+    "        super(LSTM, self).__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.num_layers = num_layers\n",
+    "        self.lstm = nn.LSTM(input_size, hidden_size, num_layers, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_size, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        h0 = torch.zeros(self.num_layers, x.size(0), self.hidden_size).to(device)\n",
+    "        c0 = torch.zeros(self.num_layers, x.size(0), self.hidden_size).to(device)\n",
+    "\n",
+    "        out, _ = self.lstm(x, (h0, c0))\n",
+    "        out = self.fc(out[:, -1, :])\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BidirectionalLSTM(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, num_layers, num_classes):\n",
+    "        super(BidirectionalLSTM, self).__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.num_layers = num_layers\n",
+    "        self.lstm = nn.LSTM(input_size, hidden_size, num_layers, batch_first=True, bidirectional=True)\n",
+    "        self.fc = nn.Linear(hidden_size * 2, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        h0 = torch.zeros(self.num_layers * 2, x.size(0), self.hidden_size).to(device)\n",
+    "        c0 = torch.zeros(self.num_layers * 2, x.size(0), self.hidden_size).to(device)\n",
+    "\n",
+    "        out, _ = self.lstm(x, (h0, c0))\n",
+    "        out = self.fc(out[:, -1, :])\n",
+    "\n",
+    "        return out\n",
+    "\n",
+    "\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,18 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = RNN(input_size, hidden_size, num_layers, num_classes).to(device)\n",
+    "model = BidirectionalLSTM(input_size, hidden_size, num_layers, num_classes).to(device)\n",
     "optimizer = optim.Adam(model.parameters(), lr = learning_rate)\n",
     "loss_fn = nn.CrossEntropyLoss()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,15 +211,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on training set: 9.03\n",
-      "Accuracy on test set: 8.92\n"
+      "Accuracy on training set: 98.18\n",
+      "Accuracy on test set: 97.93\n"
      ]
     }
    ],
@@ -177,6 +252,13 @@
     "print(f\"Accuracy on training set: {check_accuracy(train_dataloader, model)*100:.2f}\")\n",
     "print(f\"Accuracy on test set: {check_accuracy(test_dataloader, model)*100:.2f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
