--- a/Tutorials/ImageCaptioning/scratch.ipynb
+++ b/Tutorials/ImageCaptioning/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,154 @@
     "import torch.nn.functional as F\n",
     "import torchvision.datasets as datasets\n",
     "import torchvision.transforms as transforms\n",
-    "from torch.utils.data import DataLoader \n",
-    "from torch.utils.tensorboard import SummaryWriter"
+    "from torch.utils.data import DataLoader "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                   VersionNote: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "------------------------- ------------\n",
+      "absl-py                   2.1.0\n",
+      "altgraph                  0.17.3\n",
+      "annotated-types           0.6.0\n",
+      "anyio                     3.7.1\n",
+      "arrow                     1.2.3\n",
+      "asgiref                   3.6.0\n",
+      "asttokens                 2.4.1\n",
+      "Babel                     2.12.1\n",
+      "cachetools                5.3.1\n",
+      "certifi                   2024.2.2\n",
+      "charset-normalizer        3.3.2\n",
+      "click                     8.1.7\n",
+      "colorama                  0.4.6\n",
+      "comm                      0.2.2\n",
+      "contourpy                 1.2.0\n",
+      "cycler                    0.12.1\n",
+      "dataclasses               0.6\n",
+      "debugpy                   1.8.1\n",
+      "decorator                 5.1.1\n",
+      "distlib                   0.3.6\n",
+      "Django                    4.1.9\n",
+      "djangorestframework       3.14.0\n",
+      "djongo                    1.3.6\n",
+      "dnspython                 2.3.0\n",
+      "et-xmlfile                1.1.0\n",
+      "executing                 2.0.1\n",
+      "fastapi                   0.104.1\n",
+      "filelock                  3.12.0\n",
+      "fonttools                 4.49.0\n",
+      "fsspec                    2023.4.0\n",
+      "grpcio                    1.64.1\n",
+      "h11                       0.14.0\n",
+      "idna                      3.4\n",
+      "ipykernel                 6.29.4\n",
+      "ipython                   8.22.2\n",
+      "jedi                      0.19.1\n",
+      "Jinja2                    3.1.2\n",
+      "jinja2-time               0.2.0\n",
+      "joblib                    1.3.2\n",
+      "jupyter_client            8.6.1\n",
+      "jupyter_core              5.7.2\n",
+      "kiwisolver                1.4.5\n",
+      "lightning-utilities       0.11.1\n",
+      "make                      0.1.6.post2\n",
+      "Markdown                  3.6\n",
+      "MarkupSafe                2.1.2\n",
+      "matplotlib                3.8.3\n",
+      "matplotlib-inline         0.1.6\n",
+      "micrograd                 0.1.0\n",
+      "mlxtend                   0.23.1\n",
+      "monai                     1.3.2\n",
+      "mongoengine               0.27.0\n",
+      "mpmath                    1.3.0\n",
+      "nest-asyncio              1.6.0\n",
+      "networkx                  3.2.1\n",
+      "numpy                     1.24.3\n",
+      "opencv-python             4.10.0.84\n",
+      "openpyxl                  3.1.2\n",
+      "packaging                 23.2\n",
+      "pandas                    2.0.2\n",
+      "parso                     0.8.3\n",
+      "pathlib                   1.0.1\n",
+      "pefile                    2023.2.7\n",
+      "Pillow                    9.5.0\n",
+      "pip                       22.3\n",
+      "platformdirs              3.5.1\n",
+      "prompt-toolkit            3.0.43\n",
+      "protobuf                  4.25.3\n",
+      "psutil                    5.9.8\n",
+      "psycopg2                  2.9.6\n",
+      "pure-eval                 0.2.2\n",
+      "py2exe                    0.13.0.0\n",
+      "pydantic                  2.4.2\n",
+      "pydantic_core             2.10.1\n",
+      "pydicom                   2.4.4\n",
+      "Pygments                  2.17.2\n",
+      "pyinstaller               5.12.0\n",
+      "pyinstaller-hooks-contrib 2023.3\n",
+      "pymongo                   4.3.3\n",
+      "pyparsing                 3.1.1\n",
+      "pyrsistent                0.20.0\n",
+      "python-dateutil           2.8.2\n",
+      "python-dotenv             1.0.0\n",
+      "pytz                      2023.3\n",
+      "pywin32                   306\n",
+      "pywin32-ctypes            0.2.0\n",
+      "pyzmq                     25.1.2\n",
+      "requests                  2.31.0\n",
+      "scikit-learn              1.4.1.post1\n",
+      "scipy                     1.12.0\n",
+      "seaborn                   0.13.2\n",
+      "setuptools                65.5.0\n",
+      "SimpleITK                 2.3.1\n",
+      "six                       1.16.0\n",
+      "sniffio                   1.3.0\n",
+      "soupsieve                 2.5\n",
+      "sqlparse                  0.2.4\n",
+      "stack-data                0.6.3\n",
+      "starlette                 0.27.0\n",
+      "sympy                     1.12\n",
+      "tenacity                  8.5.0\n",
+      "tensorboard               2.17.0\n",
+      "tensorboard-data-server   0.7.2\n",
+      "threadpoolctl             3.3.0\n",
+      "tkcalendar                1.6.1\n",
+      "torch                     2.2.1+cu118\n",
+      "torchaudio                2.2.1+cu118\n",
+      "torchinfo                 1.8.0\n",
+      "torchmetrics              1.3.2\n",
+      "torchvision               0.17.1+cu118\n",
+      "tornado                   6.4\n",
+      "tqdm                      4.66.2\n",
+      "traitlets                 5.14.2\n",
+      "typing_extensions         4.8.0\n",
+      "tzdata                    2023.3\n",
+      "Unidecode                 1.3.8\n",
+      "urllib3                   2.2.1\n",
+      "uvicorn                   0.24.0.post1\n",
+      "virtualenv                20.23.0\n",
+      "virtualenvwrapper-win     1.2.7\n",
+      "wcwidth                   0.2.13\n",
+      "Werkzeug                  3.0.3\n",
+      "widgetsnbextension        4.0.11\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
