--- a/Tutorials/RNN/scratch.ipynb
+++ b/Tutorials/RNN/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,16 +161,12 @@
     "        out, _ = self.lstm(x, (h0, c0))\n",
     "        out = self.fc(out[:, -1, :])\n",
     "\n",
-    "        return out\n",
-    "\n",
-    "\n",
-    "\n",
-    "        "
+    "        return out\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,15 +207,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on training set: 98.18\n",
-      "Accuracy on test set: 97.93\n"
+      "Accuracy on training set: 97.40\n",
+      "Accuracy on test set: 97.35\n"
      ]
     }
    ],
@@ -257,7 +253,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as the Python Environment 'PYTORCHTB (Python 3.12.3)' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
+     ]
+    }
+   ],
    "source": []
   }
  ],
@@ -277,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
