--- a/Tutorials/TensorBoard/test.ipynb
+++ b/Tutorials/TensorBoard/test.ipynb
@@ -4,256 +4,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-      "Failed to download (trying next):\n",
-      "HTTP Error 403: Forbidden\n",
-      "\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz to dataset/MNIST\\raw\\train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting dataset/MNIST\\raw\\train-images-idx3-ubyte.gz to dataset/MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-      "Failed to download (trying next):\n",
-      "HTTP Error 403: Forbidden\n",
-      "\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz to dataset/MNIST\\raw\\train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting dataset/MNIST\\raw\\train-labels-idx1-ubyte.gz to dataset/MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
-      "Failed to download (trying next):\n",
-      "HTTP Error 403: Forbidden\n",
-      "\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz to dataset/MNIST\\raw\\t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting dataset/MNIST\\raw\\t10k-images-idx3-ubyte.gz to dataset/MNIST\\raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Failed to download (trying next):\n",
-      "HTTP Error 403: Forbidden\n",
-      "\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz to dataset/MNIST\\raw\\t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting dataset/MNIST\\raw\\t10k-labels-idx1-ubyte.gz to dataset/MNIST\\raw\n",
-      "\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n",
-      "warning: Embedding dir exists, did you set global_step for add_embedding()?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Example code of how to use the TensorBoard in PyTorch.\n",
-    "This code uses a lot of different functions from TensorBoard\n",
-    "and tries to have them all in a compact way, it might not be\n",
-    "super clear exactly what calls does what, for that I recommend\n",
-    "watching the YouTube video.\n",
-    "\n",
-    "Programmed by Aladdin Persson <aladdin.persson at hotmail dot com>\n",
-    "*    2020-04-17 Initial coding\n",
-    "*    2022-12-19 Small revision of code, checked that it works with latest PyTorch version\n",
-    "\"\"\"\n",
-    "\n",
-    "# Imports\n",
-    "import torch\n",
-    "import torchvision\n",
-    "import torch.nn as nn  # All neural network modules, nn.Linear, nn.Conv2d, BatchNorm, Loss functions\n",
-    "import torch.optim as optim  # For all Optimization algorithms, SGD, Adam, etc.\n",
-    "import torch.nn.functional as F  # All functions that don't have any parameters\n",
-    "import torchvision.datasets as datasets  # Has standard datasets we can import in a nice way\n",
-    "import torchvision.transforms as transforms  # Transformations we can perform on our dataset\n",
-    "from torch.utils.data import (\n",
-    "    DataLoader,\n",
-    ")  # Gives easier dataset managment and creates mini batches\n",
-    "from torch.utils.tensorboard import SummaryWriter  # to print to tensorboard\n",
-    "\n",
-    "# Simple CNN\n",
-    "class CNN(nn.Module):\n",
-    "    def __init__(self, in_channels=1, num_classes=10):\n",
-    "        super(CNN, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(\n",
-    "            in_channels=in_channels, out_channels=8, kernel_size=3, stride=1, padding=1\n",
-    "        )\n",
-    "        self.pool = nn.MaxPool2d(kernel_size=(2, 2), stride=(2, 2))\n",
-    "        self.conv2 = nn.Conv2d(\n",
-    "            in_channels=8, out_channels=16, kernel_size=3, stride=1, padding=1\n",
-    "        )\n",
-    "        self.fc1 = nn.Linear(16 * 7 * 7, num_classes)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = F.relu(self.conv1(x))\n",
-    "        x = self.pool(x)\n",
-    "        x = F.relu(self.conv2(x))\n",
-    "        x = self.pool(x)\n",
-    "        x = x.reshape(x.shape[0], -1)\n",
-    "        x = self.fc1(x)\n",
-    "        return x\n",
-    "\n",
-    "\n",
-    "# Set device\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "# Hyperparameters\n",
-    "in_channels = 1\n",
-    "num_classes = 10\n",
-    "num_epochs = 3\n",
-    "\n",
-    "# Load Data\n",
-    "train_dataset = datasets.MNIST(\n",
-    "    root=\"dataset/\", train=True, transform=transforms.ToTensor(), download=True\n",
-    ")\n",
-    "\n",
-    "# To do hyperparameter search, include more batch_sizes you want to try\n",
-    "# and more learning rates!\n",
-    "batch_sizes = [32, 256]\n",
-    "learning_rates = [1e-2, 1e-3, 1e-4, 1e-5]\n",
-    "classes = [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\"]\n",
-    "\n",
-    "for batch_size in batch_sizes:\n",
-    "    for learning_rate in learning_rates:\n",
-    "        step = 0\n",
-    "        # Initialize network\n",
-    "        model = CNN(in_channels=in_channels, num_classes=num_classes)\n",
-    "        model.to(device)\n",
-    "        model.train()\n",
-    "        criterion = nn.CrossEntropyLoss()\n",
-    "        train_loader = DataLoader(\n",
-    "            dataset=train_dataset, batch_size=batch_size, shuffle=True\n",
-    "        )\n",
-    "        optimizer = optim.Adam(model.parameters(), lr=learning_rate, weight_decay=0.0)\n",
-    "        writer = SummaryWriter(\n",
-    "            f\"runs/MNIST/MiniBatchSize {batch_size} LR {learning_rate}\"\n",
-    "        )\n",
-    "\n",
-    "        # Visualize model in TensorBoard\n",
-    "        images, _ = next(iter(train_loader))\n",
-    "        writer.add_graph(model, images.to(device))\n",
-    "        writer.close()\n",
-    "\n",
-    "        for epoch in range(num_epochs):\n",
-    "            losses = []\n",
-    "            accuracies = []\n",
-    "\n",
-    "            for batch_idx, (data, targets) in enumerate(train_loader):\n",
-    "                # Get data to cuda if possible\n",
-    "                data = data.to(device=device)\n",
-    "                targets = targets.to(device=device)\n",
-    "\n",
-    "                # forward\n",
-    "                scores = model(data)\n",
-    "                loss = criterion(scores, targets)\n",
-    "                losses.append(loss.item())\n",
-    "\n",
-    "                # backward\n",
-    "                optimizer.zero_grad()\n",
-    "                loss.backward()\n",
-    "                optimizer.step()\n",
-    "\n",
-    "                # Calculate 'running' training accuracy\n",
-    "                features = data.reshape(data.shape[0], -1)\n",
-    "                img_grid = torchvision.utils.make_grid(data)\n",
-    "                _, predictions = scores.max(1)\n",
-    "                num_correct = (predictions == targets).sum()\n",
-    "                running_train_acc = float(num_correct) / float(data.shape[0])\n",
-    "                accuracies.append(running_train_acc)\n",
-    "\n",
-    "                # Plot things to tensorboard\n",
-    "                class_labels = [classes[label] for label in predictions]\n",
-    "                writer.add_image(\"mnist_images\", img_grid)\n",
-    "                writer.add_histogram(\"fc1\", model.fc1.weight)\n",
-    "                writer.add_scalar(\"Training loss\", loss, global_step=step)\n",
-    "                writer.add_scalar(\n",
-    "                    \"Training Accuracy\", running_train_acc, global_step=step\n",
-    "                )\n",
-    "\n",
-    "                if batch_idx == 230:\n",
-    "                    writer.add_embedding(\n",
-    "                        features,\n",
-    "                        metadata=class_labels,\n",
-    "                        label_img=data,\n",
-    "                        global_step=batch_idx,\n",
-    "                    )\n",
-    "                step += 1\n",
-    "\n",
-    "            writer.add_hparams(\n",
-    "                {\"lr\": learning_rate, \"bsize\": batch_size},\n",
-    "                {\n",
-    "                    \"accuracy\": sum(accuracies) / len(accuracies),\n",
-    "                    \"loss\": sum(losses) / len(losses),\n",
-    "                },\n",
-    "            )"
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "with SummaryWriter() as w:\n",
+    "    for i in range(5):\n",
+    "        w.add_hparams({'lr': 0.1*i, 'bsize': i},\n",
+    "                      {'hparam/accuracy': 10*i, 'hparam/loss': 10*i})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -272,7 +37,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
