--- a/Tutorials/RNN/scratch.ipynb
+++ b/Tutorials/RNN/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,63 @@
     "train_dataset = datasets.MNIST(root = \"../../data/mnist\", train = True, transform=train_transforms, download = True)\n",
     "test_dataset = datasets.MNIST(root = \"../../data/mnist\", train = False, transform=train_transforms, download = True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tb-nightly\n",
+      "  Using cached tb_nightly-2.18.0a20240723-py3-none-any.whl.metadata (1.6 kB)\n",
+      "Collecting absl-py>=0.4 (from tb-nightly)\n",
+      "  Using cached absl_py-2.1.0-py3-none-any.whl.metadata (2.3 kB)\n",
+      "Collecting grpcio>=1.48.2 (from tb-nightly)\n",
+      "  Downloading grpcio-1.65.1-cp39-cp39-win_amd64.whl.metadata (3.4 kB)\n",
+      "Collecting markdown>=2.6.8 (from tb-nightly)\n",
+      "  Using cached Markdown-3.6-py3-none-any.whl.metadata (7.0 kB)\n",
+      "Requirement already satisfied: numpy>=1.12.0 in c:\\users\\mapin\\anaconda3\\envs\\torch\\lib\\site-packages (from tb-nightly) (1.26.4)\n",
+      "Collecting protobuf!=4.24.0,<5.0.0,>=3.19.6 (from tb-nightly)\n",
+      "  Downloading protobuf-4.25.3-cp39-cp39-win_amd64.whl.metadata (541 bytes)\n",
+      "Requirement already satisfied: setuptools>=41.0.0 in c:\\users\\mapin\\anaconda3\\envs\\torch\\lib\\site-packages (from tb-nightly) (69.5.1)\n",
+      "Requirement already satisfied: six>1.9 in c:\\users\\mapin\\anaconda3\\envs\\torch\\lib\\site-packages (from tb-nightly) (1.16.0)\n",
+      "Collecting tensorboard-data-server<0.8.0,>=0.7.0 (from tb-nightly)\n",
+      "  Using cached tensorboard_data_server-0.7.2-py3-none-any.whl.metadata (1.1 kB)\n",
+      "Collecting werkzeug>=1.0.1 (from tb-nightly)\n",
+      "  Using cached werkzeug-3.0.3-py3-none-any.whl.metadata (3.7 kB)\n",
+      "Requirement already satisfied: importlib-metadata>=4.4 in c:\\users\\mapin\\anaconda3\\envs\\torch\\lib\\site-packages (from markdown>=2.6.8->tb-nightly) (8.0.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.1.1 in c:\\users\\mapin\\anaconda3\\envs\\torch\\lib\\site-packages (from werkzeug>=1.0.1->tb-nightly) (2.1.3)\n",
+      "Requirement already satisfied: zipp>=0.5 in c:\\users\\mapin\\anaconda3\\envs\\torch\\lib\\site-packages (from importlib-metadata>=4.4->markdown>=2.6.8->tb-nightly) (3.19.2)\n",
+      "Using cached tb_nightly-2.18.0a20240723-py3-none-any.whl (5.5 MB)\n",
+      "Using cached absl_py-2.1.0-py3-none-any.whl (133 kB)\n",
+      "Downloading grpcio-1.65.1-cp39-cp39-win_amd64.whl (4.1 MB)\n",
+      "   ---------------------------------------- 0.0/4.1 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/4.1 MB 660.6 kB/s eta 0:00:07\n",
+      "   - -------------------------------------- 0.2/4.1 MB 2.4 MB/s eta 0:00:02\n",
+      "   ------ --------------------------------- 0.7/4.1 MB 5.4 MB/s eta 0:00:01\n",
+      "   ------------ --------------------------- 1.3/4.1 MB 7.3 MB/s eta 0:00:01\n",
+      "   ----------------- ---------------------- 1.8/4.1 MB 8.3 MB/s eta 0:00:01\n",
+      "   ----------------------- ---------------- 2.4/4.1 MB 9.0 MB/s eta 0:00:01\n",
+      "   ----------------------------- ---------- 3.0/4.1 MB 9.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 3.6/4.1 MB 10.0 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  4.1/4.1 MB 10.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 4.1/4.1 MB 10.2 MB/s eta 0:00:00\n",
+      "Using cached Markdown-3.6-py3-none-any.whl (105 kB)\n",
+      "Downloading protobuf-4.25.3-cp39-cp39-win_amd64.whl (413 kB)\n",
+      "   ---------------------------------------- 0.0/413.4 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 413.4/413.4 kB 8.6 MB/s eta 0:00:00\n",
+      "Using cached tensorboard_data_server-0.7.2-py3-none-any.whl (2.4 kB)\n",
+      "Using cached werkzeug-3.0.3-py3-none-any.whl (227 kB)\n",
+      "Installing collected packages: werkzeug, tensorboard-data-server, protobuf, grpcio, absl-py, markdown, tb-nightly\n",
+      "Successfully installed absl-py-2.1.0 grpcio-1.65.1 markdown-3.6 protobuf-4.25.3 tb-nightly-2.18.0a20240723 tensorboard-data-server-0.7.2 werkzeug-3.0.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -282,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
